# CLERIC

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cleric/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  reputation.py
cleric/agents/: __init__.py  base.py  bias_detector.py  devils_advocate.py  evaluator.py  fact_checker.py  researcher.py  synthesizer.py
cleric/memory/: __init__.py  store.py
cleric/output/: __init__.py  mermaid.py  report.py
cleric/tools/: __init__.py  registry.py  web_fetch.py  web_search.py
docs/samples/: README.md
docs/samples/social_media_mental_health/: agent_interaction.mermaid  bias_analysis.mermaid  evaluation_scorecard.mermaid  pipeline_flow.mermaid  raw_data.json  report.md  source_map.mermaid  verification_status.mermaid
tests/: conftest.py  test_agents.py  test_base_agent_advanced.py  test_cli.py  test_config.py  test_memory.py  test_mermaid.py  test_orchestrator.py  test_report.py  test_reputation.py  test_tools.py  test_web_fetch.py  test_web_search.py
verity/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
verity/agents/: __init__.py  base.py  bias_detector.py  devils_advocate.py  evaluator.py  fact_checker.py  researcher.py  synthesizer.py
verity/memory/: __init__.py
verity/output/: __init__.py  mermaid.py  report.py
verity/tools/: __init__.py  file_io.py  registry.py  web_fetch.py
web/backend/: db.py  run.py  server.py
web/backend/memory_store/: was_9_11_an_inside_job_.json  was_the_9_11_catastrophe_an_inside_job_.json
web/backend/output/mermaid/: 20260403_234200_was_the_9_11_catastrophe_an_inside_job_agent_interaction.mermaid  (+11 more)
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.svelte  app.css
(+16 files in other folders)
