[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cleric"
version = "0.1.0"
description = "C.L.E.R.I.C. — Cross-Lateral Evidence Review for Informational Clarity"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

dependencies = [
    "anthropic>=0.40.0",
    "duckduckgo-search>=7.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
cleric = "cleric.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cleric"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
